# petgraph

./: .gitattributes  .gitignore  .justfile  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  Makefile  README.md  README.rst  RELEASES.rst  _typos.toml  bench  build.rs  clippy.toml  justfile  mise.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  travis_cargo.sh
adjacency-list/: CHANGELOG.md  Cargo.toml
adjacency-list/src/: lib.rs
algorithms/: CHANGELOG.md  Cargo.toml
algorithms/src/: dominance.rs  error.rs  feedback_arc_set.rs  floyd_warshall.rs  isomorphism.rs  lib.rs  simple_paths.rs
algorithms/src/components/: condensation.rs  connectivity.rs  kosaraju.rs  mod.rs
algorithms/src/connectivity/: check.rs  mod.rs
algorithms/src/cycles/: check.rs  feedback_arc_set.rs  mod.rs  union_find.rs
algorithms/src/dag/: mod.rs  toposort.rs  transitive_reduction.rs
algorithms/src/heuristics/: matching.rs  mod.rs
algorithms/src/isomorphism/: matching.rs  mod.rs  semantic.rs
algorithms/src/operators/: mod.rs
algorithms/src/shortest_paths/: astar.rs  bellman_ford.rs  dijkstra.rs  floyd_warshall.rs  k_shortest_paths.rs  measure.rs  min_scored.rs  mod.rs  total_ord.rs
algorithms/src/traversal/: dfs.rs  mod.rs
algorithms/src/tree/: min_spanning_tree.rs  mod.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: data.rs  index.rs  lib.rs
core/src/visit/: dfsvisit.rs  filter.rs  macros.rs  mod.rs  reversed.rs  traversal.rs
crates/adjacency-matrix/: CHANGELOG.md  Cargo.toml
crates/adjacency-matrix/src/: lib.rs  list.rs  matrix.rs  utils.rs
crates/adjacency-matrix/tests/: test.rs
crates/algorithms/: CHANGELOG.md  Cargo.toml  build.rs
crates/algorithms/benches/: bellman_ford.rs  components.rs  cycle.rs  cycles.rs  dijkstra.rs  feedback_arc_set.rs  floyd_warshall.rs  isomorphism.rs  k_shortest_path_length.rs  matching.rs  tree.rs
crates/algorithms/benches/common/: factories.rs  mod.rs
crates/algorithms/benches/shortest_paths/: bellman_ford.rs  dijkstra.rs  floyd_warshall.rs  (+3 more)
crates/algorithms/src/: common.rs  dominance.rs  error.rs  lib.rs  polyfill.rs  simple_paths.rs  traits.rs
crates/algorithms/tests/: test_components_scc.rs  test_components_tarjan.rs  test_cycles_feedback_arc_set.BAK  test_cycles_feedback_arc_set.rs  test_heuristics_matching.rs  test_isomorphism.rs
crates/core/: CHANGELOG.md  Cargo.toml  build.rs
crates/core/src/: adjacency_matrix.rs  attributes.rs  compatibility_impls.rs  data.rs  density_hint.rs  deprecated.rs  edge.rs  error.rs  graph.rs  id.rs  index.rs  lib.rs  macros.rs  matrix.rs  node.rs  owned.rs  storage.rs
crates/core/tests/: test_data.rs  test_visit_dfs.rs  test_visit_filter.rs  test_visit_traversal_bfs.rs  test_visit_traversal_dfs.rs  test_visit_traversal_dfs_visit.rs  test_visit_traversal_topo.rs
crates/csr/: CHANGELOG.md  Cargo.toml
crates/csr/src/: lib.rs  tests.rs
crates/csr/tests/: test_algorithms.rs
crates/dino/: Cargo.toml  README.md
crates/dino/src/: auxiliary.rs  closure.rs  compat.rs  directed.rs  edge.rs  lib.rs  linear.rs  node.rs  resize.rs  retain.rs  slab.rs  tests.rs
crates/entry/: CHANGELOG.md  Cargo.toml
crates/entry/src/: auxiliary.rs  directed.rs  error.rs  hash.rs  lib.rs  retain.rs  reverse.rs  sequential.rs
crates/entry/tests/: test_directed.BAK  test_proptest.BAK  test_undirected.BAK
crates/graph/: CHANGELOG.md  Cargo.toml
crates/graph/benches/: ordered.rs  serialize.rs  stable.rs
crates/graph/src/: data.rs  frozen.rs  lib.rs  proptest.rs  serde.rs
crates/graph/tests/: test_directed.rs  test_proptest.rs  test_proptest_conversion.rs  test_serde.rs  test_stable_directed.rs  test_stable_proptest.rs  test_stable_undirected.rs  test_undirected.rs
crates/graphmap/: Cargo.toml
crates/graphmap/src/: directed.rs  error.rs  hash.rs  lib.rs  proptest.rs  retain.rs  reverse.rs
crates/graphmap/tests/: test_directed.rs  test_proptest.rs  test_serde.BAK  test_serde.rs
crates/io/: Cargo.toml
crates/io/src/: dot.rs  lib.rs
crates/io/tests/: test_dot.rs
crates/matrix-graph/: CHANGELOG.md  Cargo.toml
crates/matrix-graph/benches/: default.rs
crates/matrix-graph/src/: lib.rs  tests.rs
crates/matrix-graph/tests/: test_algorithms.rs
crates/matrix_graph/: Cargo.toml
crates/matrix_graph/src/: directed.rs  lib.rs  undirected.rs
crates/numi/: Cargo.toml  README.md
crates/numi/src/: borrow.rs  cast.rs  lib.rs  macros.rs  primitive.rs
crates/petgraph/: CHANGELOG.md  Cargo.toml
crates/petgraph/benches/: acyclic.rs  articulation_points.rs  bellman_ford.rs  bridges.rs  coloring.rs  dijkstra.rs  dinics.rs  feedback_arc_set.rs  floyd_warshall.rs  ford_fulkerson.rs  graph6_decoder.rs  graph6_encoder.rs  graphmap.rs  iso.rs  johnson.rs  k_shortest_path.rs  matching.rs  matrix_graph.rs  maximal_cliques.rs  min_spanning_tree.rs  page_rank.rs  serialize.rs  simple_paths.rs  spfa.rs  stable_graph.rs  unionfind.rs
crates/petgraph/src/: acyclic.rs  adj.rs  csr.rs  data.rs  generate.rs  graphmap.rs  lib.rs  matrix_graph.rs  operator.rs  prelude.rs  quickcheck.rs  serde_utils.rs  traits_graph.rs  unionfind.rs
crates/petgraph/tests/: adjacency_matrix.rs  articulation_points.rs  coloring.rs  dinics.rs  extend_edges_with_node_weights.rs  extend_with_edges_and_node_weights.rs  floyd_warshall.rs  ford_fulkerson.rs  graph.rs  graph6.rs  graphmap.rs  iso.rs  johnson.rs  k_shortest_path.rs  list.rs  matching.rs  maximal_cliques.rs  min_spanning_tree.rs  operator.rs  page_rank.rs  quickcheck.rs  spfa.rs  stable_graph.rs  steiner_trees.rs  unionfind.rs
crates/proptest/: Cargo.toml
crates/proptest/src/: binary.rs  dag.rs  default.rs  lib.rs  tournament.rs  vtable.rs
crates/proptest/tests/: test_verify.rs
graph/: CHANGELOG.md  Cargo.toml
graph/src/: data.rs  frozen.rs  lib.rs  serde.rs
graph/src/stable/: data.rs  mod.rs  serde.rs  serialization.rs
graphmap/: CHANGELOG.md  Cargo.toml
graphmap/src/: lib.rs
matrix-graph/: Cargo.toml
matrix-graph/src/: lib.rs
serialization-tests/: Cargo.toml
serialization-tests/tests/: serialization.rs
(+629 files in other folders)
