[package]
name = "petgraph"
version = "0.6.3"
authors = [
    "bluss",
    "Agustín Borgna <agustinborgna@gmail.com>",
    "Anton Kochkov <xvilka@gmail.com>",
    "Bilal Mahmoud <mahmoud@fastmail.com>",
]
categories = ["data-structures"]
documentation = "https://docs.rs/petgraph/"
edition = "2021"
keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/petgraph/petgraph"
rust-version = "1.65.0"
description = "Graph data structure library. Provides graph types and graph algorithms."


[package.metadata.release]
no-dev-version = true

[workspace]
resolver = "2"
members = [".", "crates/*"]

[workspace.dependencies]
fixedbitset = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
funty = { version = "2.0", default-features = false }
indexmap = { version = "2.0.0", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
proptest = { version = "1.1.0", default-features = false }
error-stack = { version = "0.4.0", default-features = false }
petgraph = { path = "." }
petgraph-core = { path = "crates/core", default-features = false }
petgraph-graph = { path = "crates/graph", default-features = false }
petgraph-adjacency-matrix = { path = "crates/adjacency-matrix", default-features = false }
petgraph-entry = { path = "crates/entry", default-features = false }
petgraph-csr = { path = "crates/csr", default-features = false }
petgraph-matrix-graph = { path = "crates/matrix-graph", default-features = false }
petgraph-algorithms = { path = "crates/algorithms", default-features = false }
petgraph-generators = { path = "crates/generators", default-features = false }
petgraph-proptest = { path = "crates/proptest", default-features = false }
petgraph-io = { path = "crates/io", default-features = false }
petgraph-test-utils = { path = "crates/test-utils", default-features = false }
petgraph-dino = { path = "crates/dino", default-features = false }
petgraph-utils = { path = "crates/utils", default-features = false }
numi = { path = "crates/numi", default-features = false }

[dependencies]
petgraph-adjacency-matrix = { workspace = true, optional = true, default-features = false }
petgraph-core = { workspace = true, default-features = false }
petgraph-csr = { workspace = true, optional = true, default-features = false }
petgraph-graph = { workspace = true, default-features = false }
petgraph-matrix-graph = { workspace = true, optional = true, default-features = false }
petgraph-algorithms = { workspace = true, default-features = false, features = [
    "remove-me-only-intended-for-move-graph",
] }
petgraph-generators = { workspace = true, default-features = false, optional = true }
petgraph-io = { workspace = true, default-features = false, optional = true }

[dependencies.petgraph-entry]
workspace = true
optional = true
default-features = false

[features]
adjacency-matrix = [
    "dep:petgraph-adjacency-matrix",
    "petgraph-algorithms/remove-me-only-intended-for-move-adjacency-matrix",
]
csr = ["dep:petgraph-csr"]
default = [
    "std",
    "entry",
    "stable-graph",
    "matrix-graph",
    "csr",
    "adjacency-matrix",
]
entry = ["dep:petgraph-entry"]
matrix-graph = ["dep:petgraph-matrix-graph"]
serde = ["petgraph-graph/serde"]
stable-graph = ["petgraph-graph/stable"]
io = ["petgraph-io"]
unstable-generators = ["petgraph-generators"]
std = [
    "petgraph-core/std",
    "petgraph-graph/std",
    "petgraph-adjacency-matrix?/std",
    "petgraph-csr?/std",
    "petgraph-io?/std",
]
proptest = ["petgraph-graph/proptest"]

[lib]
bench = false
name = "petgraph"

[profile.bench]
debug = true

[profile.release]

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

unreachable_pub = "warn"
unsafe_code = "deny"

[workspace.lints.cargo]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

absolute_paths = "allow"
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
else_if_without_else = "allow"
enum_variant_names = "allow"
expect_used = "allow"
indexing_slicing = "allow"
let_underscore_must_use = "allow"
missing_assert_message = "allow"
multiple_inherent_impl = "allow"
panic = "allow"
partial_pub_fields = "allow"
unwrap_in_result = "allow"
wildcard_enum_match_arm = "allow"

# Consider enabling:
default_numeric_fallback = "allow"
impl_trait_in_params = "allow"
iter_over_hash_type = "allow"
multiple_unsafe_ops_per_block = "allow"
pattern_type_mismatch = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
tests_outside_test_module = "allow"
unimplemented = "allow"
unreachable = "allow"

# Does not apply to us:
blanket_clippy_restriction_lints = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
module_name_repetitions = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
ref_patterns = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
unneeded_field_pattern = "allow"
