[workspace]
members  = ["crates/core", "crates/petgraph", "serialization-tests"]
resolver = "3"

[workspace.package]
authors = [
    "Agustín Borgna <agustinborgna@gmail.com>",
    "Anton Kochkov <xvilka@gmail.com>",
    "Bilal Mahmoud <mahmoud@fastmail.com>",
    "Raoul Luqué <raoulsluque@gmail.com>",
    "bluss",
    "mitchmindtree",
    "starovoid <prototyperailgun@gmail.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/petgraph/petgraph"
rust-version = "1.90"

[workspace.dependencies]
petgraph      = { path = "crates/petgraph" }
petgraph-core = { path = "crates/core" }

ahash             = { version = "0.7.2", default-features = false }
bincode           = { version = "1.3.3", default-features = false }
defmac            = { version = "0.2.1", default-features = false }
dot-parser        = { version = "0.5.1", default-features = false }
dot-parser-macros = { version = "0.5.1", default-features = false }
fixedbitset       = { version = "0.5.7", default-features = false }
fxhash            = { version = "0.2.1", default-features = false }
hashbrown         = { version = "^0.15.0", default-features = false }
indexmap          = { version = "2.5.0", default-features = false }
itertools         = { version = "0.12.1", default-features = false }
odds              = { version = "0.4.0", default-features = false }
quickcheck        = { version = "0.8", default-features = false }
rand              = { version = "0.5.5", default-features = false }
rayon             = { version = "1.5.3", default-features = false }
serde             = { version = "1.0", default-features = false }
serde_derive      = { version = "1.0", default-features = false }


[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style   = { level = "warn", priority = -1 }

unreachable_pub = "warn"

# TODO: Enable `cargo` lints when supported
# [workspace.lints.cargo]

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

self_named_module_files = "warn"

alloc_instead_of_core = "warn"
std_instead_of_alloc  = "warn"
std_instead_of_core   = "warn"
