[package]
name = "petgraph-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }

[dev-dependencies]
petgraph-graph.workspace = true

[features]
default = ["std"]
std = ["petgraph-core/std"]
