[package]
name = "petgraph-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
petgraph-adjacency-matrix.workspace = true
funty.workspace = true
# Like `std::collection::HashMap`, `IndexMap` is built on top of `hashbrown`, but because
# we're already using `IndexMap` in a lot of crates I do not want to pull in `hashbrown`
# separately as it would be another version to maintain. This way we only have one version.
indexmap.workspace = true
fixedbitset.workspace = true

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
petgraph-graph.workspace = true

[features]
default = ["std"]
std = ["petgraph-core/std"]
