[package]
name = "petgraph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedbitset = { version = "0.4.2", default-features = false, optional = true }

[features]
default = ["std"]
std = ["fixedbitset?/std", "alloc"]
alloc = []
