[package]
name = "petgraph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funty = { version = "2.0.0", default-features = false }
fixedbitset = { workspace = true, optional = true }

[dev-dependencies]
# Used for documentation examples
petgraph.workspace = true

[features]
default = ["std"]
std = ["fixedbitset?/std", "alloc"]
alloc = []
