[package]
name = "petgraph-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funty = { version = "2.0.0", default-features = false }
fixedbitset = { workspace = true }
serde = { workspace = true, optional = true, features = ['alloc'] }

petgraph-core = { workspace = true, features = ['alloc', 'fixedbitset'] }

[dev-dependencies]
# Used for documentation examples
petgraph.workspace = true

[features]
default = ["std", "stable"]
std = ["fixedbitset/std", "petgraph-core/std", "serde/std"]
stable = []
