[package]
name = "petgraph-graphmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funty.workspace = true
fixedbitset.workspace = true
indexmap.workspace = true

serde = { workspace = true, optional = true, default-features = false, features = ['alloc'] }

petgraph-core = { workspace = true, features = ['alloc', 'indexmap'] }
petgraph-graph = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["petgraph-core/std", "indexmap/std", "serde?/std"]
serde = ["dep:serde", "convert", "petgraph-graph?/serde"]
convert = ["petgraph-graph"]
