[package]

name = "petgraph-serialization-tests"
version = "0.0.0"
publish = false
license = "MIT/Apache-2.0"
authors = [
"bluss",
]

description = ""
documentation = ""
repository = "https://github.com/bluss/petgraph"


[dependencies]
petgraph = { path = "..", features = ["serde-1", "quickcheck"] }
itertools = { version = "0.6.2" }

[dev-dependencies]
serde_json = "1.0"
quickcheck = { version = "0.8", default-features = false }
bincode = "1.0.1"
defmac = "0.1"
