[package]
name = "petgraph-serialization-tests"
version = "0.0.0"
authors = ["bluss"]
documentation = ""
license = "MIT/Apache-2.0"
publish = false
repository = "https://github.com/petgraph/petgraph"
description = ""

[dependencies]
itertools = { version = "0.10.1" }
petgraph = { path = "..", features = ["serde", "quickcheck"] }

[dev-dependencies]
bincode = "1.3.3"
defmac = "0.2.1"
quickcheck = { version = "0.8", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
