[package]

name = "petgraph-serialization-tests"
version = "0.0.0"
publish = false
license = "MIT/Apache-2.0"
authors = ["bluss"]

rust-version = { workspace = true }
edition = { workspace = true }

description = ""
documentation = ""
repository = "https://github.com/petgraph/petgraph"


[dependencies]
petgraph = { path = "..", features = ["serde-1", "quickcheck"] }
itertools = { version = "0.10.1" }

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
quickcheck = { version = "0.8", default-features = false }
bincode = "1.3.3"
defmac = "0.2.1"
