[package]
name = "petgraph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fixedbitset = { workspace = true, optional = true }
funty.workspace = true
indexmap = { workspace = true, optional = true }
error-stack = { workspace = true }

[dev-dependencies]
petgraph = { workspace = true, features = ['proptest'] }
petgraph-proptest.workspace = true
proptest = "1.2.0"

[features]
alloc = []
default = ["std"]
std = ["fixedbitset?/std", "indexmap?/std", "alloc"]
