[package]
name = "petgraph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
numi = { workspace = true }
fixedbitset = { workspace = true, optional = true }
bitvec = "1.0.1"
funty.workspace = true
indexmap = { workspace = true, optional = true }
error-stack = { workspace = true }

[dev-dependencies]
proptest = "1.2.0"
petgraph-dino.workspace = true

[features]
alloc = []
default = ["std"]
std = ["fixedbitset/std", "indexmap?/std", "alloc"]
