[package]
name                   = "petgraph-core"
version                = "0.1.0"
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
foldhash  = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }

[features]
utils = ["dep:foldhash", "dep:hashbrown"]

[lints]
workspace = true
