[package]
name = "petgraph-dino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph-core = { workspace = true, features = ['alloc'] }
error-stack.workspace = true

either = "1.9.0" # TODO: potentially remove
bitvec = "1.0.1"

# Closures
roaring = "0.10.2"
croaring = "1.0.1"
fnv = { version = "1.0.7", default-features = false }
hashbrown = { workspace = true, features = ['ahash'] }
