[package]
name = "petgraph-dino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numi = { workspace = true }
petgraph-core = { workspace = true, features = ['alloc'] }
error-stack.workspace = true

bitvec = "1.0.1"
either = "1.9.0" # TODO: potentially remove

[dev-dependencies]
hashbrown = { workspace = true, features = ['ahash'] }
