[package]
name = "petgraph-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fixedbitset = { workspace = true }
funty = { version = "2.0.0", default-features = false }
petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
serde = { workspace = true, optional = true, features = ["alloc", "derive"] }
proptest = { workspace = true, optional = true }
petgraph-proptest = { workspace = true, optional = true }

[dev-dependencies]
# Used for documentation examples
petgraph.workspace = true
serde-value = "0.7.0"

[features]
default = ["std", "stable"]
stable = []
std = ["fixedbitset/std", "petgraph-core/std", "serde/std"]
serde = ["dep:serde"]
proptest = ["dep:proptest", "dep:petgraph-proptest"]
