[package]
name = "petgraph-graphmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fixedbitset.workspace = true
funty.workspace = true
indexmap.workspace = true
petgraph-core = { workspace = true, features = ["alloc", "indexmap"] }
petgraph-graph = { workspace = true, optional = true }
serde = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
petgraph-proptest = { workspace = true, default-features = false, optional = true }
proptest = { workspace = true, default-features = false, optional = true }

[dev-dependencies]

[features]
convert = ["petgraph-graph"]
default = ["std"]
serde = ["dep:serde", "convert", "petgraph-graph?/serde"]
std = ["petgraph-core/std", "indexmap/std", "serde?/std"]
proptest = ["dep:proptest", "dep:petgraph-proptest"]
