[package]
name = "petgraph-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph-core = { workspace = true, features = ['alloc'] }
dot = { version = "0.1.4", optional = true }

[dev-dependencies]
petgraph = { workspace = true, features = [] }
insta = "1.29.0"

[features]
default = ["std"]
std = ["petgraph-core/std"]
dot = ["dep:dot", "std"]
