[package]
name = "petgraph-matrix-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
funty.workspace = true
indexmap.workspace = true
fixedbitset.workspace = true
petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }

[dev-dependencies]
criterion = "0.5.1"
petgraph-test-utils.workspace = true

[features]
default = ["std"]
std = ["petgraph-core/std"]

[[benches]]
name = "default"
harness = false
