[package]
name                   = "petgraph-matrix-graph"
version                = "0.1.0"
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
petgraph-core = { workspace = true }

foldhash  = { workspace = true }
hashbrown = { workspace = true }
indexmap  = { workspace = true }
itertools = { workspace = true }

[features]

[lints]
workspace = true
