[package]
name = "petgraph-proptest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph-core = { workspace = true, features = ['alloc'] }
proptest = { workspace = true, features = ['alloc'] }
itertools = "0.10.5" # remove if possible

[dev-dependencies]
petgraph-graph = { workspace = true, features = ['proptest'] }
